--- a/Web/views/pages/admin-extensions.ejs
+++ b/Web/views/pages/admin-extensions.ejs
@@ -174,6 +174,18 @@
 								<% if (["command", "keyword"].includes(extensionData.type)) { %>
 								<hr>
 								<h4 class="title is-4">Command Options</h4>
+								<% if (extensionData.type === "command" && extensionData.typeInfo && extensionData.typeInfo.key === "season") { %>
+								<div class="field">
+									<label class="label">Season Options</label>
+									<div class="control">
+										<label class="checkbox">
+											<input name="season_reset_points" type="checkbox" <%= extensionConfigDocument.store && extensionConfigDocument.store.season_reset_points ? "checked" : "" %>>
+											Reset server points when starting a new season
+										</label>
+									</div>
+									<span class="help">If enabled, using <code>season reset</code> will reset member points (rank score) for this server.</span>
+								</div>
+								<% } %>
 								<div class="field">
 									<label class="label">Permissions</label>
 									<div class="control">
