--- a/Web/views/partials/extension-builder.ejs
+++ b/Web/views/partials/extension-builder.ejs
@@ -310,6 +310,33 @@
 		</div>
 	</div>
 	<hr>
+	<% if (isGallery && pageData.extensionData._id) { %>
+	<div class="field">
+		<label class="label">Premium Settings</label>
+		<p class="control">
+			<label class="checkbox">
+				<input id="builder-premium-enabled" type="checkbox" <%= pageData.extensionData.premium && pageData.extensionData.premium.is_premium ? "checked" : "" %>>
+				Mark as Premium Extension
+			</label>
+		</p>
+	</div>
+	<div class="field" style="max-width: 340px;">
+		<label class="label">Price (points)</label>
+		<p class="control">
+			<input id="builder-premium-price" class="input is-primary" type="number" data-revenue-share="<%= (pageData.extensionData.premium && pageData.extensionData.premium.revenue_share) ? pageData.extensionData.premium.revenue_share : ((pageData.premiumMarketplace && pageData.premiumMarketplace.default_revenue_share) ? pageData.premiumMarketplace.default_revenue_share : 70) %>" min="<%= (pageData.premiumMarketplace && pageData.premiumMarketplace.min_price_points) ? pageData.premiumMarketplace.min_price_points : 0 %>" max="<%= (pageData.premiumMarketplace && pageData.premiumMarketplace.max_price_points) ? pageData.premiumMarketplace.max_price_points : 1000000 %>" value="<%= pageData.extensionData.premium && pageData.extensionData.premium.price_points ? pageData.extensionData.premium.price_points : '' %>" <%= pageData.extensionData.premium && pageData.extensionData.premium.is_premium ? '' : 'disabled' %>>
+		</p>
+		<p class="help" id="builder-premium-estimate">Estimated earnings: <span id="builder-premium-estimate-value">0</span> points</p>
+		<% if (pageData.premiumMarketplace && pageData.premiumMarketplace.approval_required) { %>
+		<p class="help">Premium extensions require maintainer approval</p>
+		<% } %>
+	</div>
+	<div class="field">
+		<p class="control">
+			<button class="button is-info" onclick="SkynetUtil.savePremiumSettings('<%= pageData.extensionData._id %>'); return false;">Save Premium Settings</button>
+		</p>
+	</div>
+	<hr>
+	<% } %>
 	<div class="field">
 		<label class="label">Description</label>
 		<p class="control">
