--- a/Web/views/partials/maintainer-menu.ejs
+++ b/Web/views/partials/maintainer-menu.ejs
@@ -23,6 +23,7 @@ const isInSection = (paths) => paths.some(p => isActive(`${basePath}/${p}`));
 	<ul class="menu-list">
 		<li>
 			<%- menuItem('maintainer', 'Overview') %>
+			<%- menuItem('tickets', 'Support Tickets', 'fa fa-ticket') %>
 			<%- menuItem('feedback', 'Feedback', 'fa fa-comments') %>
 		</li>
 	</ul>
