--- a/Web/views/partials/extension-builder.ejs
+++ b/Web/views/partials/extension-builder.ejs
@@ -391,6 +391,28 @@
 	</div>
 	<hr>
 	<% } %>
+	<% if (isGallery) { %>
+	<div class="field">
+		<label class="label">
+			<i class="fa fa-tags"></i> Tags
+			<span class="tag is-info is-light ml-2">Categorize your extension</span>
+		</label>
+		<span class="help mb-3">Select up to 3 tags that best describe your extension.</span>
+		<div class="control">
+			<div class="columns is-multiline">
+				<% (pageData.extensionTags || []).forEach(tag => { %>
+				<div class="column is-half-mobile is-one-third-tablet is-one-quarter-desktop">
+					<label class="checkbox box mb-0 p-2 is-flex is-align-items-center" style="cursor: pointer;">
+						<input type="checkbox" name="tags" value="<%= tag %>" class="mr-2" <%= pageData.extensionData.tags && pageData.extensionData.tags.includes(tag) ? "checked" : "" %>>
+						<span><%= tag %></span>
+					</label>
+				</div>
+				<% }); %>
+			</div>
+		</div>
+	</div>
+	<hr>
+	<% } %>
 	<div class="field">
 		<label class="label">Description</label>
 		<p class="control">
