--- a/Web/views/partials/maintainer-menu.ejs
+++ b/Web/views/partials/maintainer-menu.ejs
@@ -15,7 +15,7 @@ const serversPaths = ['servers/server-list', 'servers/big-message'];
 const globalPaths = ['global-options/blocklist', 'global-options/bot-user', 'global-options/homepage', 'global-options/wiki-contributors', 'global-options/donations', 'global-options/vote-sites', 'global-options/bot-lists', 'global-options/premium-extensions', 'global-options/network-approvals'];
 const membershipPaths = ['membership/features', 'membership/tiers', 'membership/oauth', 'membership/payments', 'membership/email', 'membership/servers'];
 const managementPaths = ['management/maintainers', 'management/shards', 'management/injection', 'management/version', 'management/eval', 'management/logs'];
-const infraPaths = ['infrastructure/cloudflare'];
+const infraPaths = ['infrastructure/cloudflare', 'infrastructure/indexnow'];
 
 const isInSection = (paths) => paths.some(p => isActive(`${basePath}/${p}`));
 %>
@@ -136,6 +136,7 @@ const isInSection = (paths) => paths.some(p => isActive(`${basePath}/${p}`));
 			<ul class="menu-list">
 				<li>
 					<%- menuItem('infrastructure/cloudflare', 'Cloudflare') %>
+					<%- menuItem('infrastructure/indexnow', 'IndexNow SEO') %>
 				</li>
 			</ul>
 		</div>
